--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,14 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // https://mvnrepository.com/artifact/com.navercorp.lucy/lucy-xss
+    implementation group: 'com.navercorp.lucy', name: 'lucy-xss', version: '1.6.3'
+    // https://mvnrepository.com/artifact/com.navercorp.lucy/lucy-xss-servlet
+    implementation group: 'com.navercorp.lucy', name: 'lucy-xss-servlet', version: '2.0.0'
+    implementation 'org.apache.commons:commons-text:1.8'
+
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
